[metadata]
name = nr_frequency
version = attr: nr_frequency.__version__
author = Michal Krugly
author_email = mickrugly@gmail.com
description = 3GPP New Radio frequency settings generation
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = [COPYING]
platform = any
keywords = 3gpp, New Radio, 5G, frequency
classifiers =
  Development Status :: 5 - Production/Stable
  Intended Audience :: Developers
  License :: OSI Approved :: Apache License, Version 2.0
  Operating System :: OS Independent
  Programming Language :: Python
  Topic :: Internet
  Topic :: Software Development :: Libraries :: Python Modules
  Topic :: Communications :: Telephony
  Topic :: Software Development :: Testing

[options]
packages = find:
python_requires = >= 3.7
setup_requires =
  setuptools >=39.2.0
install_requires =
